# SceneEval

./: .gitignore  README.md  main.py  pyproject.toml  setup.sh
.claude/: settings.json  settings.local.json.tmp.5821.1764452394482
.claude/commands/: create-pr.md
assets/: __init__.py  base.py  idesign.py  layoutvlm_objathor.py  retriever.py  scene_agent.py  sceneweaver.py
configs/: assets.yaml  config.yaml  metrics.yaml  models.yaml
configs/evaluation_plan/: eval_plan.yaml  no_llm_plan.yaml  render_plan.yaml  sceneagent_plan.yaml  sceneweaver_plan.yaml  semantic_color_render.yaml
conversion/holodeck/: README.md  convert_SceneEval_headless.py  convert_SceneEval_unity.py
conversion/idesign/: README.md  __init__.py  convert_SceneEval.py  convert_SceneEval_blender.py
conversion/layoutvlm/: convert_SceneEval.py
metrics/: __init__.py  accessibility.py  architectural_welded_equilibrium.py  collision.py  combined_welded_equilibrium.py  drake_collision.py  drake_scene_agent.py  drake_utils.py  obj_arch_relationship.py  obj_count.py  obj_matching.py  obj_obj_relationship.py  registry.py  static_equilibrium.py  support.py  welded_equilibrium.py
parallel/: __init__.py  executor.py  worker.py
scenes/: blender_scene.py  config.py  obj.py  scene.py  scene_state.py  trimesh_scene.py
scripts/: generate_metric_csv.py  generate_metric_table.py  generate_rank_table.py  run_parallel.sh  run_parallel_all.sh  run_parallel_list.sh  zip_output_eval.sh
spatial/: arch_relation.py  bounding_box.py  spatial_relation.py
utils/: carpet_detection.py
vlm/: prompts.yaml
(+4 files in other folders)
